--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,72 +2,56 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --ntnu-main: #00509e;
   --ntnu-secondary: #6096d0;
-}
+} */
 
 @layer base {
   :root {
-    --background: #f5f3f2;
-    --foreground: 222.2 84% 4.9%;
-
-    --card: var(--ntnu-secondary);
-    --card-foreground: #000;
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
-
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
-
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
-
+    --background: #f8fafc;
+    --foreground: #020817;
+    /* --card: #020817; */
+    --card: #6096d0;
+    --card-foreground: #f8fafc;
+    --popover: #ffffff;
+    --popover-foreground: #020817;
+    --primary: #0f172a;
+    --primary-foreground: #f8fafc;
+    --secondary: #f1f5f9;
+    --secondary-foreground: #0f172a;
+    --muted: #f1f5f9;
+    --muted-foreground: #64748b;
+    --accent: #f1f5f9;
+    --accent-foreground: #0f172a;
+    --destructive: #ef4444;
+    --destructive-foreground: #f8fafc;
+    --border: #e2e8f0;
+    --input: #e2e8f0;
+    --ring: #020817;
     --radius: 0.5rem;
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
-
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
-
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
-
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
-
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
-
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
-
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
-
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
-
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
+    --background: #020817;
+    --foreground: #f8fafc;
+    --card: #020817;
+    --card-foreground: #f8fafc;
+    --popover: #020817;
+    --popover-foreground: #f8fafc;
+    --primary: #f8fafc;
+    --primary-foreground: #0f172a;
+    --secondary: #1e293b;
+    --secondary-foreground: #f8fafc;
+    --muted: #1e293b;
+    --muted-foreground: #94a3b8;
+    --accent: #1e293b;
+    --accent-foreground: #f8fafc;
+    --destructive: #7f1d1d;
+    --destructive-foreground: #f8fafc;
+    --border: #1e293b;
+    --input: #1e293b;
+    --ring: #1e293b;
   }
 }
 
@@ -85,3 +69,50 @@
     @apply text-xl;
   }
 }
+
+/* .dark-2 {
+  --background: #020817;
+  --foreground: #F8FAFC;
+  --muted: #1E293B;
+  --muted-foreground: 215 20.2% 65.1%;
+  --popover: #020817;
+  --popover-foreground: #F8FAFC;
+  --card: #020817;
+  --card-foreground: #F8FAFC;
+  --border: #1E293B;
+  --input: #1E293B;
+  --primary: #F8FAFC;
+  --primary-foreground: #0F172A;
+  --secondary: #1E293B;
+  --secondary-foreground: #F8FAFC;
+  --accent: #1E293B;
+  --accent-foreground: #F8FAFC;
+  --destructive: #7F1D1D;
+  --destructive-foreground: 0 85.7% 97.3%;
+  --ring: #1E293B;
+} */
+
+/* 
+.root {
+    --background: #FFFFFF;
+    --foreground: #020817;
+    --muted: #F1F5F9;
+    --muted-foreground: #64748B;
+    --popover: #FFFFFF;
+    --popover-foreground: #020817;
+    --card: #FFFFFF;
+    --card-foreground: #020817;
+    --border: #E2E8F0;
+    --input: #E2E8F0;
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
+    --secondary: #F1F5F9;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+    --accent: #F1F5F9;
+    --accent-foreground: 222.2 47.4% 11.2%;
+    --destructive: #EF4444;
+    --destructive-foreground: 210 40% 98%;
+    --ring: 215 20.2% 65.1%;
+    --radius: 0.5rem; 
+  
+}  */
